<resources>
    <string name="app_name">中文-乌兹别克语翻译</string>
    <string name="hint_input">输入文字...</string>
    <string name="btn_translate">翻译</string>
    <string name="btn_speak_input">🎤 语音输入</string>
    <string name="btn_speak_output">🔊 朗读</string>
    <string name="btn_swap">⇄ 切换语言</string>
    <string name="lang_chinese">中文</string>
    <string name="lang_uzbek">O\'zbekcha (乌兹别克语)</string>
    <string name="translation_result">翻译结果</string>
    <string name="please_wait">请稍候...</string>
    <string name="downloading_model">正在下载翻译模型...</string>
    <string name="error_translation">翻译出错，请重试</string>
    <string name="error_speech">语音识别失败</string>
    <string name="permission_denied">需要麦克风权限才能使用语音功能</string>
</resources>
